[tool.poetry]
name = "test-litestar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
litestar = "^2.9.0"
redis = {extras = ["hiredis"], version = "^5.0.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
